--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,6 @@ name: getmetalprice_api
 description: A sample command-line application.
 version: 1.0.0
 # homepage: https://www.example.com
-
 environment:
   sdk: '>=2.17.0 <3.0.0'
 
@@ -14,5 +13,8 @@ dependencies:
   shelf_router: ^1.0.0
 
 dev_dependencies:
+  peanut: ^4.1.1
+  build_web_compilers: ^3.2.3
+  build_runner: ^2.1.11
   lints: ^2.0.0
   test: ^1.16.0
