--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,8 @@ dependencies:
   shelf_router: ^1.0.0
 
 dev_dependencies:
+  build_web_compilers:
+  build_test:
   build_runner: ^2.1.11
-  peanut: ^4.1.1
-  build_web_compilers: ^3.2.3
   lints: ^2.0.0
   test: ^1.16.0
