--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,17 @@
 name: getmetalprice_api
-description: A sample command-line application.
+description: A server app using the shelf package and Docker.
 version: 1.0.0
 # homepage: https://www.example.com
+
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: '>=2.17.1 <3.0.0'
 
 dependencies:
   args: ^2.0.0
-  html: ^0.15.0
-  http: ^0.13.4
   shelf: ^1.1.0
   shelf_router: ^1.0.0
 
 dev_dependencies:
-  build_web_compilers:
-  build_test:
-  build_runner: ^2.1.11
+  http: ^0.13.0
   lints: ^2.0.0
-  test: ^1.16.0
+  test: ^1.15.0
