--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,12 +2,12 @@ name: getmetalprice_api
 description: A server app using the shelf package and Docker.
 version: 1.0.0
 # homepage: https://www.example.com
-
 environment:
   sdk: '>=2.17.1 <3.0.0'
 
 dependencies:
   args: ^2.0.0
+  html: ^0.15.0
   shelf: ^1.1.0
   shelf_router: ^1.0.0
 
